set fixed snap duration to 5 min (lcd) to prevent issues with overlapping slots, hide highlight so that drag and drop does not appear broken (due to use of slot time and duration override)

--- a/src/main/frontend/src/schedule/_schedule.scss
+++ b/src/main/frontend/src/schedule/_schedule.scss
@@ -90,6 +90,11 @@
 		.fc-scroller {
 			overflow: visible !important;
 		}
+		// hide the highlight area selection. hidden so that it does not look like a draggable appointment can be made
+		// remove if the start time/end time go back to relying on the selected area
+		.fc-highlight {
+			background: transparent;
+		}
 
 		$scheduleCodeWidth: 16px;
 		/* styling for normal events */
